--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -6,6 +6,9 @@
     {% row 'border-bottom' %}
         {% col 'offset-4' %}
             <h3>{{ post.title }}</h3>
+            {% if post.hero_image %}
+               <img src="{{ post.hero_image.thumbnail.100x100.url }}"/>
+            {% endif %}
             {% include "blog/post-byline.html" %}
             <p>{{ post.summary }}</p>
             <p>
